# ariadne

./: .gitignore  AGENTS.md  BUILD_PLAN.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  STATUS.md  STYLE.md  agent_session.db  agent_session.db-shm  agent_session.db-wal  alembic.ini  patch_message_list.py  patch_types.py  patch_workspace.py  pyproject.toml  script.py
.agent/: skill-config.json
FAST API /: app.py  db.py  models.py  routes.py  schemas.py  services.py  test_todo_api.py  todo.db
agent_prototype/: README.md  agent.py  agent_definition.py  agent_definition_store.py  agent_loader.py  app.py  db.py  models.py  routes.py  schemas.py  services.py  session_store.py  tool_registry.py  tool_types.py
alembic/: env.py
backend/: README.md
docs/: Python基础操作.md  database-schema.md  rename-plan.md  type-topology.html
frontend/: index.html  package-lock.json  patch_chat.py  patch_composer.py  restore_and_patch.py
scratch/: check_db.py
specs/: ARCHITECTURE_REFACTORING.md  TASK-004.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md  TASK-010.md  TASK-011.md  TASK-012.md  TASK-013.md  TASK-014.md  TASK-015.md  TASK-016.md  TASK-018.md  TASK-019.md  TASK-020.md  TASK-021.md  TASK-022.md  TASK-023.md  TASK-024.md  TASK-025.md  TASK-026.md  TASK-027.md  TASK-028.md  TASK-029.md  TASK-030.md  TASK-031.md  TASK-032.md  TASK-033.md  TASK-034.md  TASK-035.md  TASK-036.md  TASK-037.md  TASK-038.md  TASK-039.md  TASK-040.md  TASK-041.md  TASK-042.md  TASK-043.md  TASK-044.md  (+47 more)
swift-client/: Package.swift  pack.sh
todo-api/: app.py  routes.py  schemas.py  todo.db  (+2 more)
(+558 files in other folders)
