[project]
name = "ariadne"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [

    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
]
